--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="shortcut icon" href="favicon.ico" />
         <link href='https://fonts.googleapis.com/css?family=Nunito:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="jquery.fancybox.min.css">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -611,8 +612,9 @@
                 </a>
             </h4>
         </footer><!--
-        --><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+        --><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
+        <script src="jquery.fancybox.min.js"></script>
         <script src="assets/js/plugins.js"></script>
         <script src="assets/js/main.js"></script>
     </body>
