Quite los comentarios entre los bloques HTML

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                                     <path d="M256 0c-141.385 0-256 114.615-256 256s114.615 256 256 256 256-114.615 256-256-114.615-256-256-256zM256 464c-114.875 0-208-93.125-208-208s93.125-208 208-208 208 93.125 208 208-93.125 208-208 208zM192 144l192 112-192 112z"></path>
                                 </svg>vies
                 </a>
-            </h1><!-- 
-             --><nav class="nav">
+            </h1>
+             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__list-element">
                         <a href="#">
@@ -75,8 +75,8 @@
                         </a>
                     </li>
                 </ul>
-            </nav><!-- 
-             --><div class="u-profile">   
+            </nav> 
+             <div class="u-profile">   
                 <figure>
                     <div class="u-profile__circle"></div>
                     <div class="u-profile__circle--red"></div>
@@ -92,12 +92,12 @@
                     </a>
                 </span>
             </div>
-        </header><!-- 
-         --><section class="banner">
+        </header> 
+         <section class="banner">
             <h2 class="banner__title">Guardians of the Galaxy</h2>
             <figure>
-                <img class="banner__img" src="assets/img/guardian-of-the-galaxy-poster.jpg"><!-- 
-                 --><figcaption class="info">
+                <img class="banner__img" src="assets/img/guardian-of-the-galaxy-poster.jpg"> 
+                 <figcaption class="info">
                     <p class="info__text">Released <span class="info__text--red">Feb 20, 2014</span></p>
                     <p class="info__text">Runtime <span class="info__text--red">139 mins</span></p>
                     <p class="info__text">Score
@@ -141,21 +141,20 @@
                         </span> 
                         2,548
                     </p>
-                </figcaption><!--   
-             --></figure>
-        </section><!-- 
-         --><section class="new-releases">
-                 <h3 class="playlist__title">New Releases</h3><!-- 
-                 --><div class="form">
+                </figcaption>   
+             </figure>
+        </section>
+         <section class="new-releases">
+                 <h3 class="playlist__title">New Releases</h3> 
+                 <div class="form">
                     <form>
                         <input class="form__search" placeholder="Search...">
                         <img class="form__icon" role="img" src="assets/img/search.svg">
                     </form>
                 </div>
              </section>
-             <section class="playlist"><!-- 
-             --><div class="playlist__grid"> 
-                <!-- articulo 1 -->
+             <section class="playlist"> 
+             <div class="playlist__grid">
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -181,7 +180,6 @@
                         </figure>
                     </article>
 
-                    <!-- articulo 2 -->
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -207,7 +205,6 @@
                         </figure>
                     </article>
                     
-                    <!-- articulo 3 -->
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -233,7 +230,6 @@
                         </figure>
                     </article>
 
-                    <!-- articulo 4 -->
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -259,7 +255,6 @@
                         </figure>
                     </article>
 
-                    <!-- articulo 5 -->
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -285,8 +280,8 @@
                         </figure>
                     </article>
                 </div>
-        </section><!-- 
-        --><section class="display">
+        </section>
+        <section class="display">
             <div class="display__image">
                <figure>
                     <img src="assets/img/guardians_of_the_galaxy__flyer.jpg">
@@ -338,14 +333,13 @@
                 <h5 class="display__credits__title">STARS:</h5>
                 <p>Chris Pratt, Zoe Saldana, Dave Bautista, Vin Diesel, Bradley Cooper and others...</p> 
             </div>
-        </section><!--
-         --><div style="display: none;" id="modal">
+        </section>
+        <div style="display: none;" id="modal">
             <h2>Guardians of the Galaxy</h2>
             <p>You are awesome!</p>
-        </div><!--
-            --><section class="playlist">
+        </div>
+            <section class="playlist">
                 <div class="playlist__grid">
-                <!-- 2da fila articulo 1-->
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -371,7 +365,6 @@
                         </figure>
                     </article>
 
-                    <!-- 2da fila articulo 2 -->
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -397,7 +390,6 @@
                         </figure> 
                     </article>
 
-                    <!-- 2da fila articulo 3 -->
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -423,7 +415,6 @@
                         </figure>
                     </article>
 
-                    <!-- 2da fila articulo 4 -->
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -449,7 +440,6 @@
                         </figure>
                     </article>
 
-                    <!-- 2da fila articulo 5 -->
                     <article class="thumbs">
                         <div class="playlist__layer"></div>
                         <p class="info__text thumbs__icon">
@@ -475,8 +465,8 @@
                         </figure>
                     </article>
                 </div>
-            </section><!-- 
-         --><section class="playlist">
+            </section> 
+         <section class="playlist">
             <h3 class="playlist__title playlist__title--favorites">Favorites</h3>
             <div class="playlist__grid">
                 <article class="thumbs">
@@ -604,8 +594,8 @@
                     </figure>
                 </article>
             </div>
-        </section><!-- 
-         --><footer class="footer">
+        </section>
+        <footer class="footer">
             <p class="footer__text">&#169; All rights reserved - 2015 Koombea</p>
             <h4 class="company-logo--footer">
                 <a href="" class="company-logo__name company-logo__name--footer">
@@ -615,8 +605,8 @@
                                 </svg>vies
                 </a>
             </h4>
-        </footer><!--
-        --><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="assets/js/plugins.js"></script>
         <script src="assets/js/main.js"></script>
