Corrgiendo el header con los comentarios en HTML para que no falle el grid

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <header>
-            <h1 class="company-logo">
+        <header><!-- 
+             --><h1 class="company-logo">
                 <a href="" class="company-logo__name">
                     K<span class="company-logo__name--doubleo">oo</span>mbea m<svg class="company-logo__name--icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512">
                                     <g id="icomoon-ignore"></g>
                                     <path d="M256 0c-141.385 0-256 114.615-256 256s114.615 256 256 256 256-114.615 256-256-114.615-256-256-256zM256 464c-114.875 0-208-93.125-208-208s93.125-208 208-208 208 93.125 208 208-93.125 208-208 208zM192 144l192 112-192 112z"></path>
                                 </svg>vies
                 </a>
-            </h1>
-             <nav class="nav">
+            </h1><!-- 
+              --><nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__list-element">
                         <a href="#">
@@ -75,8 +75,8 @@
                         </a>
                     </li>
                 </ul>
-            </nav> 
-             <div class="u-profile">   
+            </nav><!-- 
+              --><div class="u-profile">   
                 <figure>
                     <div class="u-profile__circle"></div>
                     <div class="u-profile__circle--red"></div>
