Agregue modal window para cuando se hace click en watch trailer

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <section class="display">
             <div class="display__image">
                <figure>
-                    <img src="assets/img/guardians_of_the_galaxy__flyer.jpg">
+                    <img src="assets/img/flyers/guardians_of_the_galaxy.jpg">
                 </figure> 
             </div>
             <div class="display__summary">
@@ -334,9 +334,57 @@
                 <p>Chris Pratt, Zoe Saldana, Dave Bautista, Vin Diesel, Bradley Cooper and others...</p> 
             </div>
         </section>
-        <div style="display: none;" id="modal">
+        <div style="display: none;" id="modal" class="modal">
             <h2>Guardians of the Galaxy</h2>
-            <p>You are awesome!</p>
+            <div class="modal__video">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/d96cjJhvlMA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+            <h3 class="modal__title">Similar movies</h3>
+            <hr class="divider">
+            <div class="similars">
+                <figure class="similars__figure">
+                    <img src="assets/img/flyers/spiderman.jpg">
+                    <figcaption>
+                        <h4>The Amazing Spiderman</h4>
+                    </figcaption>
+                </figure>
+                <figure class="similars__figure">
+                    <img src="assets/img/flyers/thor_dark_world1.jpg">
+                    <figcaption>
+                        <h4>Thor: The Dark World</h4>
+                    </figcaption>
+                </figure>
+                <figure class="similars__figure">
+                    <img src="assets/img/flyers/captain_america.jpg">
+                    <figcaption>
+                        <h4>The First Avenger</h4>
+                    </figcaption>
+                </figure>
+                <figure class="similars__figure">
+                    <img src="assets/img/flyers/ironman2.jpg">
+                    <figcaption>
+                        <h4>Iron Man 2</h4>
+                    </figcaption>
+                </figure>
+                <figure class="similars__figure">
+                    <img src="assets/img/flyers/ironman3.jpg">
+                    <figcaption>
+                        <h4>Iron Man 3</h4>
+                    </figcaption>
+                </figure>
+                <figure class="similars__figure">
+                    <img src="assets/img/flyers/avengers.jpg">
+                    <figcaption>
+                        <h4>The Avengers</h4>
+                    </figcaption>
+                </figure>
+                <figure class="similars__figure">
+                    <img src="assets/img/flyers/thor.jpg">
+                    <figcaption>
+                        <h4>Thor</h4>
+                    </figcaption>
+                </figure>
+            </div>
         </div>
             <section class="playlist">
                 <div class="playlist__grid">
